small bug fixes- p2third card works properly; aligns player hands

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,6 +17,15 @@
 .hand-card-value{
     font-size: 60px;
 }
+.p1-hand{
+    position: relative;
+    margin-left: 13%;
+}
+.p2-hand{
+    position: relative;
+    margin-right: 0;
+
+}
 .game-board{
     height: 400px;
 }
